--- a/src/app/modules/land-creation/cust-land-list/cust-land-list.component.html
+++ b/src/app/modules/land-creation/cust-land-list/cust-land-list.component.html
@@ -115,7 +115,7 @@
 
     </div>
     <div class="flex flex-auto mt-4" style="flex-direction: column;overflow-y: scroll">
-        <div class="example-table-container">
+        <div class="example-table-container overflow-scroll" [style.height]="gridHeight">
             <!--[style.height]="gridHeight"-->
             <mat-table
                 #table
@@ -194,26 +194,26 @@
 
             </mat-table>
         </div>
-
+        <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
+            Items per page:
+            <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
+                        style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+                <mat-option [value]="5">5</mat-option>
+                <mat-option [value]="10">10</mat-option>
+                <mat-option [value]="25">25</mat-option>
+                <mat-option [value]="50">50</mat-option>
+                <mat-option [value]="100">100</mat-option>
+                <mat-option [value]="500">500</mat-option>
+                <mat-option [value]="1000">1000</mat-option>
+            </mat-select>
+            <button (click)="paginate(1)">First</button>
+            <pagination-controls display="inline" (pageChange)="paginate($event)"
+                                 style="display: inline-block;"></pagination-controls>
+            <button (click)="paginate(Math.Ceil(totalItems/itemsPerPage))">Last</button>
+            <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
+    
+        </div>
 
     </div>
-    <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
-        Items per page:
-        <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
-                    style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
-            <mat-option [value]="5">5</mat-option>
-            <mat-option [value]="10">10</mat-option>
-            <mat-option [value]="25">25</mat-option>
-            <mat-option [value]="50">50</mat-option>
-            <mat-option [value]="100">100</mat-option>
-            <mat-option [value]="500">500</mat-option>
-            <mat-option [value]="1000">1000</mat-option>
-        </mat-select>
-        <button (click)="paginate(1)">First</button>
-        <pagination-controls display="inline" (pageChange)="paginate($event)"
-                             style="display: inline-block;"></pagination-controls>
-        <button (click)="paginate(Math.Ceil(totalItems/itemsPerPage))">Last</button>
-        <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
 
-    </div>
 </div>
