--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -178,7 +178,7 @@
 
         <!-- Products list -->
         <div class="flex flex-auto overflow-scroll" style="flex-direction: column;">
-            <div class="flex flex-col flex-auto sm:mb-18 overflow-hidden sm:overflow-y-auto">
+            <div class="flex flex-col flex-auto sm:mb-18  overflow-scroll" [style.height]="gridHeight">
                 <mat-table class="lmat-elevation-z8"
                            #table
                            [dataSource]="dataSource | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems}"
@@ -283,30 +283,31 @@
                     <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
 
                 </mat-table>
-                <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
-                    Items per page:
-                    <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
-                        style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
-                        <mat-option [value]="5">5</mat-option>
-                        <mat-option [value]="10">10</mat-option>
-                        <mat-option [value]="25">25</mat-option>
-                        <mat-option [value]="50">50</mat-option>
-                    </mat-select>
-                    <button (click)="paginate(1)">First</button>
-                    <pagination-controls display="inline" (pageChange)="paginate($event)"
-                        style="display: inline-block;"></pagination-controls>
-                    <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
-                    <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
 
-                </div>
 
                 <div class="mat-table__message" *ngIf="!loading && !matTableLenght">No records found</div>
                 <div class="mat-table__message" *ngIf="loading">Please wait....</div>
 
             </div>
+            
 
         </div>
 
     </div>
+    <div *ngIf="matTableLenght" class="mat-select" style="padding:5px;">
+        Items per page:
+        <mat-select display="inline" [(value)]="itemsPerPage" (valueChange)="paginate(1,$event)"
+            style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+            <mat-option [value]="5">5</mat-option>
+            <mat-option [value]="10">10</mat-option>
+            <mat-option [value]="25">25</mat-option>
+            <mat-option [value]="50">50</mat-option>
+        </mat-select>
+        <button (click)="paginate(1)">First</button>
+        <pagination-controls display="inline" (pageChange)="paginate($event)"
+            style="display: inline-block;"></pagination-controls>
+        <button (click)="paginate(Math.ceil(totalItems/itemsPerPage))">Last</button>
+        <p style="float:right;">Total <b>{{totalItems}}</b> items</p>
 
+    </div>
 </div>
