--- a/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
@@ -195,10 +195,13 @@
               <td>{{array.GenderCount}}</td>
               <td>{{array.GenderType}}</td>
               <td>{{array.AverageLoanSize}}</td>
-              <td >
-                <div class="w-96 break-words">
-                  {{array.AgriBusinessPotential}}
+              <td  style="width: 100px; text-align:center;" >
+                <div class="w-96">
+                  <div class="w-full break-words text-justify">
+                    {{array.AgriBusinessPotential}}
+                  </div>
                 </div>
+
                 </td>
               <td >
                 <div class="d-flex justify-content-center">
