--- a/src/app/modules/configuration-management/document-type-edit/document-type-edit.component.html
+++ b/src/app/modules/configuration-management/document-type-edit/document-type-edit.component.html
@@ -26,11 +26,11 @@
 
 
     <div class="row pt-4 border-t mt-4">
-        <div class="col-lg-12 text-center col-sm-12">
+        <div class="col-lg-12 text-right col-sm-12">
             <div class="kt-portlet__foot kt-portlet__foot--fit kt-portlet__no-border">
                 <div class="kt-form__actions kt-form__actions--solid">
                     <div class="row">
-                        <div class="col-lg-12 text-center">
+                        <div class="col-lg-12 text-right">
                             <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button [mat-dialog-close]="data.animal"
                                     cdkFocusInitial>
                                     <mat-icon class="mr-2">cancel</mat-icon> Cancel
