--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/remark-dialog/remark-dialog.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/remark-dialog/remark-dialog.component.html
@@ -41,7 +41,7 @@
 </div> -->
 
 
-<form [formGroup]="remarkForm" class="kt-form kt-form--group-seperator-dashed">
+<form [formGroup]="remarkForm" class="kt-form kt-form--group-seperator-dashed h-screen">
   <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Edit Page</div>
 
   <div class="kt-form">
