--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
@@ -108,7 +108,7 @@
 
 
     </div>
-    <div class="mat-table__wrapper mat-elevation-z8">
+    <div class="mat-table__wrapper" >
         <!--[style.height]="gridHeight"-->
         <mat-table class="lmat-elevation-z8"
                    #table
