--- a/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
+++ b/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
@@ -1,15 +1,16 @@
-<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+<div
+    class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="text-4xl font-extrabold tracking-tight">API Logs</div>
     <!-- Header -->
     <div class="py-4" [formGroup]="FilterForm">
-
 
 
         <div class="row">
             <div class="col-lg-4 col-sm-12">
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 ">
                     <mat-form-field class="w-full" appearance="outline">
-                        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search" autocomplete="off"
+                        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search"
+                               autocomplete="off"
                                appearance="outline">
                         <mat-hint align="start"><strong>Search</strong> in all fields</mat-hint>
                     </mat-form-field>
@@ -21,17 +22,17 @@
                         <mat-label>Choose start date</mat-label>
                         <input matInput [matDatepicker]="picker1" formControlName="StartDate"
                                (dateChange)="comparisonStartdateValidator()" autocomplete="off">
-        
+
                         <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-        
+
                         <mat-datepicker #picker1></mat-datepicker>
-        
+
                         <mat-error *ngIf="FilterForm.controls['StartDate'].hasError('invaliddaterange')">
                             <strong>Start date cannot be greater than end date</strong>
                         </mat-error>
                         <mat-error *ngIf="hasError('StartDate', 'required')">Start Date <strong>required</strong>
                         </mat-error>
-        
+
                     </mat-form-field>
                 </div>
             </div>
@@ -41,15 +42,16 @@
                         <mat-label>Choose end date</mat-label>
                         <input matInput [matDatepicker]="picker" formControlName="EndDate"
                                (dateChange)="comparisonEnddateValidator()" autocomplete="off">
-        
+
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-datepicker #picker></mat-datepicker>
-        
+
                         <mat-error *ngIf="FilterForm.controls['EndDate'].hasError('invaliddaterange')">
                             <strong>End date cannot be earlier than start date</strong>
                         </mat-error>
-        
-                        <mat-error *ngIf="hasError('EndDate', 'required')">End Date <strong>required</strong></mat-error>
+
+                        <mat-error *ngIf="hasError('EndDate', 'required')">End Date <strong>required</strong>
+                        </mat-error>
                     </mat-form-field>
                 </div>
             </div>
@@ -60,17 +62,12 @@
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                     <button mat-raised-button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary"
                             type="button" (click)="loadApiLogs()">
-                            <mat-icon class="mr-2">search</mat-icon> Search
+                        <mat-icon class="mr-2">search</mat-icon>
+                        Search
                     </button>
                 </div>
             </div>
         </div>
-
-
-
-
-
-
 
 
     </div>
@@ -81,7 +78,7 @@
         <span class="mat-header-cell" mat-sort-header="ApiName">API Name</span>
         <span class="mat-header-cell" mat-sort-header="CallDateTime">Call Date Time</span>
         <span class="mat-header-cell" mat-sort-header="ResponseDateTime">Response Date Time</span>
-        <span class="mat-header-cell" mat-sort-header="ResponseDateTime">Total Time Taken</span>
+        <span class="mat-header-cell" mat-sort-header="ResponseTotalTime">Total Time Taken</span>
         <span class="mat-header-cell" mat-sort-header="View">View</span>
     </section>
     <mat-accordion displayMode="flat" multi class="mat-table" style="overflow-y:scroll;">
@@ -102,7 +99,7 @@
                                         </button>
                 </span>
             </mat-expansion-panel-header>
-            <div *ngFor="let tp_item of third_party_apis">
+            <div *ngFor="let tp_item of item?.third_apis">
                 <div class="custom-accordion-body">
                     <table class="table table-responsive" style="display: inline-table !important;">
                         <thead class="thead-light">
