--- a/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
+++ b/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
@@ -122,9 +122,9 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-12">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-                    <img src="../../../../../assets/media/icons/svg/Shopping/Calculator.svg" style="margin-top: 4%; width: 20px;"
+            <div class="col-lg-3 col-sm-12 text-center self-center">
+                <div class="">
+                    <img  class="cursor-pointer mx-auto  w-10" src="../../../../../assets/media/icons/svg/Shopping/Calculator.svg"
                          alt="Calculator" (click)="AreaConvertor()"/>
         
                 </div>
