Village wise banchmarking fixed

--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -105,7 +105,7 @@
               </div> -->
 
 
-                <div class="col-lg-3 col-sm-12">
+                <div class="col-lg-4 ">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Cnic</mat-label>
                         <input matInput placeholder="Enter Cnic" formControlName="Cnic" appNumberOnly maxlength="13"
