Village wise banchmarking fixed

--- a/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
+++ b/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
@@ -142,6 +142,8 @@
                     </table>
                 </div>
             </div>
+                </div>
+            </div>
         </mat-expansion-panel>
 
     </mat-accordion>
@@ -152,5 +154,6 @@
                    [pageSize]="10"
                    [pageSizeOptions]="[5, 10, 25, 100]"
     ></mat-paginator>
+</div>
 </div>
 
