--- a/src/app/modules/report-managment/exception-detail/exception-detail.component.html
+++ b/src/app/modules/report-managment/exception-detail/exception-detail.component.html
@@ -1,20 +1,20 @@
 <h3 class="text-3xl  mt-4  font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Error Log Details({{errorLogDetails.MethodName}})</h3>
 
 <table class="table ">
-    <thead class="bg-success">
+    <thead class="bg-green">
     <tr style="text-align: center">
-        <th scope="col">Input Parameters</th>
-        <th scope="col">ZTBL Input Parameters</th>
-        <th scope="col">Error Trace</th>
-        <th scope="col">Message</th>
+        <th class="text-white" scope="col">Input Parameters</th>
+        <th class="text-white"  scope="col">ZTBL Input Parameters</th>
+        <th class="text-white"  scope="col">Error Trace</th>
+        <th class="text-white"  scope="col">Message</th>
     </tr>
     </thead>
     <tbody>
     <tr>
-        <td class="text-black w-24"> <div class="w-24 break-words">{{errorLogDetails.InputParameters}}</div> </td>
-        <td class="text-black w-24"> <div class="w-24 break-words">{{errorLogDetails.ZtblInputParams}}</div>    </td>
-        <td class="text-black w-56"> <div class="w-96 break-words">{{errorLogDetails.ErrorTrace}}</div></td>
-        <td class="text-black w-56"> <div class="w-96 break-words"> {{errorLogDetails.Message}}</div> </td>
+        <td class="text-black w-24"> <div class="w-96 mx-4 break-words">{{errorLogDetails.InputParameters}}</div> </td>
+        <td class="text-black w-24"> <div class="w-24 mx-4 break-words">{{errorLogDetails.ZtblInputParams}}</div>    </td>
+        <td class="text-black w-56"> <div class="w-96 mx-4 break-words">{{errorLogDetails.ErrorTrace}}</div></td>
+        <td class="text-black w-56"> <div class="w-24 mx-4 break-words"> {{errorLogDetails.Message}}</div> </td>
     </tr>
     </tbody>
 </table>
