--- a/src/app/modules/report-managment/exception-log/exception-log.component.html
+++ b/src/app/modules/report-managment/exception-log/exception-log.component.html
@@ -1,60 +1,80 @@
-<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight px-2">Exception Logs</div>
+<div class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+    <div class="text-3xl mt-4  font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Exception Logs</div>
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8"
-         style="flex-wrap: wrap" [formGroup]="FilterForm">
+    <div class="py-4" [formGroup]="FilterForm">
         <div
             class="absolute inset-x-0 bottom-0">
             <mat-progress-bar [mode]="'indeterminate'" *ngIf="loading"></mat-progress-bar>
         </div>
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <mat-form-field appearance="outline">
-                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search" autocomplete="off"
-                       appearance="outline">
-                <mat-hint align="start"><strong>Search</strong> in all fields</mat-hint>
-            </mat-form-field>
+
+
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                    <mat-form-field appearance="outline" class=" w-full">
+                        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search" autocomplete="off"
+                               appearance="outline">
+                        <mat-hint align="start"><strong>Search</strong> in all fields</mat-hint>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label>Choose start date</mat-label>
+                        <input matInput [matDatepicker]="picker1" formControlName="StartDate"
+                               (dateChange)="comparisonStartdateValidator()" autocomplete="off">
+        
+                        <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+        
+                        <mat-datepicker #picker1></mat-datepicker>
+        
+                        <mat-error *ngIf="FilterForm.controls['StartDate'].hasError('invaliddaterange')">
+                            <strong>Start date cannot be greater than end date</strong>
+                        </mat-error>
+                        <mat-error *ngIf="hasError('StartDate', 'required')">Start Date <strong>required</strong>
+                        </mat-error>
+        
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label>Choose end date</mat-label>
+                        <input matInput [matDatepicker]="picker" formControlName="EndDate"
+                               (dateChange)="comparisonEnddateValidator()" autocomplete="off">
+        
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+        
+                        <mat-error *ngIf="FilterForm.controls['EndDate'].hasError('invaliddaterange')">
+                            <strong>End date cannot be earlier than start date</strong>
+                        </mat-error>
+        
+                        <mat-error *ngIf="hasError('EndDate', 'required')">End Date <strong>required</strong></mat-error>
+                    </mat-form-field>
+                </div>
+            </div>
+
         </div>
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                <mat-label>Choose start date</mat-label>
-                <input matInput [matDatepicker]="picker1" formControlName="StartDate"
-                       (dateChange)="comparisonStartdateValidator()" autocomplete="off">
+        <div class="row pt-2">
+            <div class="col-lg-12 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                    <button mat-raised-button color="primary"
+                            type="button" (click)="loadErrorLogs()">
+                        <mat-icon class="mr-2">search</mat-icon> Search
+                    </button>
+                </div>
+            </div>
 
-                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-
-                <mat-datepicker #picker1></mat-datepicker>
-
-                <mat-error *ngIf="FilterForm.controls['StartDate'].hasError('invaliddaterange')">
-                    <strong>Start date cannot be greater than end date</strong>
-                </mat-error>
-                <mat-error *ngIf="hasError('StartDate', 'required')">Start Date <strong>required</strong>
-                </mat-error>
-
-            </mat-form-field>
         </div>
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                <mat-label>Choose end date</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="EndDate"
-                       (dateChange)="comparisonEnddateValidator()" autocomplete="off">
 
-                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
 
-                <mat-error *ngIf="FilterForm.controls['EndDate'].hasError('invaliddaterange')">
-                    <strong>End date cannot be earlier than start date</strong>
-                </mat-error>
 
-                <mat-error *ngIf="hasError('EndDate', 'required')">End Date <strong>required</strong></mat-error>
-            </mat-form-field>
-        </div>
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <button mat-raised-button color="accent"
-                    type="button" (click)="loadErrorLogs()">
-                <mat-icon>search</mat-icon>
-                Find
-            </button>
-        </div>
+
+
+
     </div>
     <div class="example-table-container">
         <mat-table class="lmat-elevation-z8"
